--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^21.12.2",
     "@react-native-firebase/auth": "^21.12.2",
     "@react-native-google-signin/google-signin": "^13.2.0",
+    "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/elements": "^2.3.1",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
