--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-firebase/app": "^21.12.2",
     "@react-native-firebase/auth": "^21.12.2",
+    "@react-native-firebase/firestore": "^21.12.2",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/elements": "^2.3.1",
